--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -1,11 +1,14 @@
 package:
-    name:           php-merchant-ecoin
-    namespace:      hiqdev\php\merchant\ecoin
-    title:          eCoin plugin for PHP merchant library
+    name:           omnipay-ecoin
+    namespace:      Omnipay\eCoin
+    headline:       Omnipay: eCoin
+    title:          eCoin driver for Omnipay PHP payment library
     type:           library
     keywords:       php, ecoin, merchant
     description:    |
-        [eCoin](http://ecoin.cc/) plugin for [PHP merchant library](https://github.com/hiqdev/php-merchant).
+        [Omnipay](https://github.com/omnipay/omnipay) is a framework agnostic, multi-gateway payment
+        processing library for PHP 5.3+.
+        This package implements [eCoin](http://ecoin.cc/) support for Omnipay.
 
 require:
     hiqdev/hidev-config:        "*"
