--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -4,7 +4,8 @@ package:
     headline:       Omnipay: eCoin
     title:          eCoin driver for Omnipay PHP payment library
     type:           library
-    keywords:       php, ecoin, merchant
+    license:        MIT
+    keywords:       php, omnipay, ecoin, merchant, payment
     description:    |
         [Omnipay](https://github.com/omnipay/omnipay) is a framework agnostic, multi-gateway payment
         processing library for PHP 5.3+.
