--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -1,16 +1,17 @@
 package:
+    type:           library
     name:           omnipay-ecoin
     namespace:      Omnipay\eCoin
-    headline:       Omnipay: eCoin
+    headline:       "Omnipay: eCoin"
     title:          eCoin driver for Omnipay PHP payment library
-    type:           library
     license:        MIT
     keywords:       php, omnipay, ecoin, merchant, payment
     description:    |
         [Omnipay](https://github.com/omnipay/omnipay) is a framework agnostic, multi-gateway payment
         processing library for PHP 5.3+.
+
         This package implements [eCoin](http://ecoin.cc/) support for Omnipay.
 
 require:
-    hiqdev/hidev-vendor: "*"
     hiqdev/hidev-php:    "*"
+    hiqdev/hidev-vendor: "*"
