--- a/composer.json
+++ b/composer.json
@@ -45,16 +45,22 @@
         }
     ],
     "require": {
-        "omnipay/common": "~2.3"
+        "php": ">7.1",
+        "omnipay/common": "^3.0"
     },
     "require-dev": {
-        "omnipay/tests": "~2.0",
+        "omnipay/tests": "^3.0",
         "hiqdev/hidev-php": "*",
         "hiqdev/hidev-hiqdev": "*"
     },
     "autoload": {
         "psr-4": {
             "Omnipay\\eCoin\\": "src"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "3.0.x-dev"
         }
     }
 }
